syntax = "proto3";

package hospital;

import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "org.hospital.user";

enum ROLES {
  ADMIN = 0;
  DOCTOR = 1;
  NURSE = 2;
  PATIENT = 3;
}

message UserProto {
  int64 id = 1;
  string name = 2;
  string login = 3;
  string email = 4;
  string password = 5;
  ROLES role = 6;
}

message UserByIdRequest {
  int64 userId = 1;
}

message UserCreateRequest {
  string name = 2;
  string email = 3;
  string login = 4;
  string password = 5;
  google.protobuf.Timestamp birthDate = 6;
  ROLES role = 7;
}
message UserCreatedResponse {
  int64 id = 1;
  string message = 2;
  bool success = 3;
}
service UserService {
  rpc GetUserById(UserByIdRequest) returns (UserProto);
  rpc CreateUser(UserCreateRequest) returns (UserCreatedResponse);
}
